fix: shift dum_venku crop to top edge (5% -> 0%)

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 #header-carousel .carousel-item:nth-child(2) img {
-    object-position: center 5%;
+    object-position: center 0%;
 }
 
 #header-carousel .carousel-item:nth-child(3) img {
